# AnguishedTechnologicalVariables1

./: .env.example  .env.local  .eslintrc.json  .gitignore  .npmrc  .replit  LEARN.md  README.md  SECURITY_AUDIT.md  firestore.rules  middleware.ts  netlify.toml  next.config.js  package-lock.json  package.json  performance-optimization.md  pyproject.toml  rem.text  replit.md  replit_metadata.json  secrets-template.env  site_links.txt  site_links_comprehensive_analysis.md  tailwind.config.js  tsconfig.json  typings.d.ts  vercel.json
.next/: build-manifest.json  react-loadable-manifest.json  trace
AnguishedTechnologicalVariables/: .replit.yaml  .replit_project_info  .replitai  .replitai_config  AI_PROJECT_SIGNATURE.md
cache/: action_movies.json  cache-config.json  comedy_movies.json  documentaries.json  horror_movies.json  netflix_originals.json  romance_movies.json  top_rated_movies.json  trending_movies.json
cast/: [id].tsx
components/: AboutFeed.tsx  AccessibilityProvider.tsx  Actress.tsx  AddBookmark.tsx  AdvancedSearch.tsx  AdvancedSearchFilters.tsx  AuthProvider.tsx  BilledCast.tsx  Breadcrumbs.tsx  CacheControls.tsx  Children.tsx  Companies.tsx  DemoAccess.tsx  DetailsFeed.tsx  DownloadShows.tsx  DynamicImageOptimizer.tsx  EnhancedButton.tsx  EnhancedSearch.tsx  EnjoyOnTv.tsx  ErrorBoundary.tsx  ErrorFallback.tsx  FavoriteFeed.tsx  Footer.tsx  GlobalErrorBoundary.tsx  GuestModeNotice.tsx  HomeBanner.tsx  Icons.tsx  ImprovedSkeleton.tsx  InfiniteScroll.tsx  InputValidator.tsx  LazyMovieCard.tsx  LazyRow.tsx  LikeActress.tsx  LoadingSpinner.tsx  MainDetails.tsx  (+24 more)
(+108 files in other folders)
